// Vitest Snapshot v1

exports[`Button > Button baseVue demo works fine 1`] = `
<t-space
  size="24px"
>
  <t-button
    theme="default"
    variant="base"
  >
    填充按钮
  </t-button>
  <t-button
    theme="default"
    variant="outline"
  >
    描边按钮
  </t-button>
  <t-button
    theme="default"
    variant="dashed"
  >
    虚框按钮
  </t-button>
  <t-button
    theme="default"
    variant="text"
  >
    文字按钮
  </t-button>
</t-space>
`;

exports[`Button > Button blockVue demo works fine 1`] = `
<t-space
  align="center"
  data-v-59dd211d=""
  direction="vertical"
>
  <t-button
    block=""
    data-v-59dd211d=""
    theme="primary"
    variant="base"
  >
    填充按钮
  </t-button>
  <t-button
    block=""
    data-v-59dd211d=""
    variant="outline"
  >
    描边按钮
  </t-button>
  <t-button
    block=""
    data-v-59dd211d=""
    variant="dashed"
  >
    虚框按钮
  </t-button>
  <t-button
    block=""
    data-v-59dd211d=""
    variant="text"
  >
    文字按钮
  </t-button>
</t-space>
`;

exports[`Button > Button customElementVue demo works fine 1`] = `
<t-space
  size="24px"
>
  <t-button
    tag="div"
  >
    div
  </t-button>
  <t-button
    tag="a"
  >
    a
  </t-button>
  <t-button
    href="#"
  >
    a:href
  </t-button>
</t-space>
`;

exports[`Button > Button ghostVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space>
    <t-button
      ghost=""
      variant="outline"
    >
      幽灵按钮
    </t-button>
    <t-button
      ghost=""
      variant="dashed"
    >
      幽灵按钮
    </t-button>
    <t-button
      ghost=""
      variant="text"
    >
      幽灵按钮
    </t-button>
  </t-space>
  <t-space>
    <t-button
      ghost=""
      theme="primary"
      variant="outline"
    >
      幽灵按钮
    </t-button>
    <t-button
      ghost=""
      theme="primary"
      variant="dashed"
    >
      幽灵按钮
    </t-button>
    <t-button
      ghost=""
      theme="primary"
      variant="text"
    >
      幽灵按钮
    </t-button>
  </t-space>
  <t-space>
    <t-button
      ghost=""
      theme="success"
      variant="outline"
    >
      幽灵按钮
    </t-button>
    <t-button
      ghost=""
      theme="success"
      variant="dashed"
    >
      幽灵按钮
    </t-button>
    <t-button
      ghost=""
      theme="success"
      variant="text"
    >
      幽灵按钮
    </t-button>
  </t-space>
  <t-space>
    <t-button
      ghost=""
      theme="warning"
      variant="outline"
    >
      幽灵按钮
    </t-button>
    <t-button
      ghost=""
      theme="warning"
      variant="dashed"
    >
      幽灵按钮
    </t-button>
    <t-button
      ghost=""
      theme="warning"
      variant="text"
    >
      幽灵按钮
    </t-button>
  </t-space>
  <t-space>
    <t-button
      ghost=""
      theme="danger"
      variant="outline"
    >
      幽灵按钮
    </t-button>
    <t-button
      ghost=""
      theme="danger"
      variant="dashed"
    >
      幽灵按钮
    </t-button>
    <t-button
      ghost=""
      theme="danger"
      variant="text"
    >
      幽灵按钮
    </t-button>
  </t-space>
</t-space>
`;

exports[`Button > Button iconVue demo works fine 1`] = `
<t-space
  size="24px"
>
  <t-button
    theme="primary"
  >
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      slot="icon"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
     新建 
  </t-button>
  <t-button
    variant="outline"
  >
    <svg
      class="t-icon t-icon-cloud-upload"
      fill="none"
      height="1em"
      slot="icon"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4.73 6.26l-.71.09A2.32 2.32 0 002 8.67c0 1.2.89 2.18 2 2.31v1a3.31 3.31 0 01-3-3.31 3.32 3.32 0 012.9-3.32A4.2 4.2 0 018 2c2 0 3.69 1.43 4.1 3.35 1.63.2 2.9 1.6 2.9 3.32a3.31 3.31 0 01-3 3.32v-1c1.11-.14 2-1.11 2-2.32 0-1.22-.9-2.2-2.02-2.32l-.71-.09-.15-.7A3.2 3.2 0 008 3a3.2 3.2 0 00-3.12 2.56l-.15.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M6.14 10.72L7.5 9.39l.03 5.12 1.01-.01-.03-5.1 1.37 1.34.72-.7-2.26-2.2a.5.5 0 00-.7 0l-2.22 2.18.72.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
     上传文件 
  </t-button>
  <t-button
    shape="circle"
    theme="primary"
  >
    <svg
      class="t-icon t-icon-discount"
      fill="none"
      height="1em"
      slot="icon"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.84 5.01A2 2 0 115 7.84 2 2 0 017.84 5zm-.7.7a1 1 0 10-1.42 1.42 1 1 0 001.41-1.41z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        clip-rule="evenodd"
        d="M2 7.95V2h5.95a1 1 0 01.7.3l6.14 6.13a1 1 0 010 1.41L9.84 14.8a1 1 0 01-1.41 0L2.29 8.66A1 1 0 012 7.95zM7.95 3l6.13 6.13-4.95 4.95L3 7.95V3h4.95z"
        fill="currentColor"
        fill-opacity="0.9"
        fill-rule="evenodd"
      />
    </svg>
  </t-button>
  <t-button
    shape="circle"
    theme="primary"
  >
    <svg
      class="t-icon t-icon-cloud-download"
      fill="none"
      height="1em"
      slot="icon"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4.73 6.26l-.71.09A2.32 2.32 0 002 8.67c0 1.2.89 2.18 2 2.31v1a3.31 3.31 0 01-3-3.31 3.32 3.32 0 012.9-3.32A4.2 4.2 0 018 2c2 0 3.69 1.43 4.1 3.35 1.63.2 2.9 1.6 2.9 3.32a3.31 3.31 0 01-3 3.32v-1c1.11-.14 2-1.11 2-2.32 0-1.22-.9-2.2-2.02-2.32l-.71-.09-.15-.7A3.2 3.2 0 008 3a3.2 3.2 0 00-3.12 2.56l-.15.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M9.8 11.3l-1.3 1.29v-4.6h-1v4.6L6.2 11.3l-.7.7 2.15 2.15c.2.2.51.2.7 0L10.5 12l-.7-.71z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </t-button>
  <t-button
    icon="function () { [native code] }"
    variant="outline"
  >
     搜索 
  </t-button>
</t-space>
`;

exports[`Button > Button shapeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space>
    <t-button
      shape="rectangle"
      theme="primary"
      variant="base"
    >
      填充按钮
    </t-button>
    <t-button
      shape="square"
      theme="primary"
      variant="base"
    >
      <svg
        class="t-icon t-icon-calendar"
        fill="none"
        height="1em"
        slot="icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </t-button>
    <t-button
      shape="round"
      theme="primary"
      variant="base"
    >
      填充按钮
    </t-button>
    <t-button
      shape="circle"
      theme="primary"
      variant="base"
    >
      <svg
        class="t-icon t-icon-calendar"
        fill="none"
        height="1em"
        slot="icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </t-button>
  </t-space>
  <t-space>
    <t-button
      shape="rectangle"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      shape="square"
      variant="outline"
    >
      <svg
        class="t-icon t-icon-calendar"
        fill="none"
        height="1em"
        slot="icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </t-button>
    <t-button
      shape="round"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      shape="circle"
      variant="outline"
    >
      <svg
        class="t-icon t-icon-calendar"
        fill="none"
        height="1em"
        slot="icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </t-button>
  </t-space>
  <t-space>
    <t-button
      shape="rectangle"
      variant="dashed"
    >
      虚框按钮
    </t-button>
    <t-button
      shape="square"
      variant="dashed"
    >
      <svg
        class="t-icon t-icon-calendar"
        fill="none"
        height="1em"
        slot="icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </t-button>
    <t-button
      shape="round"
      variant="dashed"
    >
      虚框按钮
    </t-button>
    <t-button
      shape="circle"
      variant="dashed"
    >
      <svg
        class="t-icon t-icon-calendar"
        fill="none"
        height="1em"
        slot="icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </t-button>
  </t-space>
  <t-space>
    <t-button
      shape="rectangle"
      variant="text"
    >
      文字按钮
    </t-button>
    <t-button
      shape="square"
      variant="text"
    >
      <svg
        class="t-icon t-icon-calendar"
        fill="none"
        height="1em"
        slot="icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </t-button>
    <t-button
      shape="round"
      variant="text"
    >
      文字按钮
    </t-button>
    <t-button
      shape="circle"
      variant="text"
    >
      <svg
        class="t-icon t-icon-calendar"
        fill="none"
        height="1em"
        slot="icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </t-button>
  </t-space>
</t-space>
`;

exports[`Button > Button sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space>
    <t-button
      size="small"
      theme="primary"
      variant="base"
    >
      填充按钮
    </t-button>
    <t-button
      size="small"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      size="small"
      variant="dashed"
    >
      虚框按钮
    </t-button>
    <t-button
      size="small"
      variant="text"
    >
      文字按钮
    </t-button>
  </t-space>
  <t-space>
    <t-button
      size="medium"
      theme="primary"
      variant="base"
    >
      填充按钮
    </t-button>
    <t-button
      size="medium"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      size="medium"
      variant="dashed"
    >
      虚框按钮
    </t-button>
    <t-button
      size="medium"
      variant="text"
    >
      文字按钮
    </t-button>
  </t-space>
  <t-space>
    <t-button
      size="large"
      theme="primary"
      variant="base"
    >
      填充按钮
    </t-button>
    <t-button
      size="large"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      size="large"
      variant="dashed"
    >
      虚框按钮
    </t-button>
    <t-button
      size="large"
      variant="text"
    >
      文字按钮
    </t-button>
  </t-space>
</t-space>
`;

exports[`Button > Button statusVue demo works fine 1`] = `
<t-space>
  <t-button
    disabled=""
  >
    填充按钮
  </t-button>
  <t-button
    loading=""
  >
    加载中
  </t-button>
</t-space>
`;

exports[`Button > Button themeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space>
    <t-button
      theme="default"
    >
      填充按钮
    </t-button>
    <t-button
      theme="default"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      theme="default"
      variant="dashed"
    >
      虚框按钮
    </t-button>
    <t-button
      theme="default"
      variant="text"
    >
      文字按钮
    </t-button>
  </t-space>
  <t-space>
    <t-button
      theme="primary"
    >
      填充按钮
    </t-button>
    <t-button
      theme="primary"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      theme="primary"
      variant="dashed"
    >
      虚框按钮
    </t-button>
    <t-button
      theme="primary"
      variant="text"
    >
      文字按钮
    </t-button>
  </t-space>
  <t-space>
    <t-button
      theme="danger"
    >
      填充按钮
    </t-button>
    <t-button
      theme="danger"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      theme="danger"
      variant="dashed"
    >
      虚框按钮
    </t-button>
    <t-button
      theme="danger"
      variant="text"
    >
      文字按钮
    </t-button>
  </t-space>
  <t-space>
    <t-button
      theme="warning"
    >
      填充按钮
    </t-button>
    <t-button
      theme="warning"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      theme="warning"
      variant="dashed"
    >
      虚框按钮
    </t-button>
    <t-button
      theme="warning"
      variant="text"
    >
      文字按钮
    </t-button>
  </t-space>
  <t-space>
    <t-button
      theme="success"
    >
      填充按钮
    </t-button>
    <t-button
      theme="success"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      theme="success"
      variant="dashed"
    >
      虚框按钮
    </t-button>
    <t-button
      theme="success"
      variant="text"
    >
      文字按钮
    </t-button>
  </t-space>
</t-space>
`;
